# kdtrace

./: CMakeLists.txt  CMakePresets.json  COPYING.md  FILESTRUCTURE.md  LICENSE.md  README.md  TODO.md  setup.py
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml
app/: CMakeLists.txt  kdtrace_app.cpp
include/kdtrace/: kdtrace.hpp
python/kdtrace/: __init__.py  _kdtrace.cpp
src/: CMakeLists.txt  kdtrace.cpp
tests/: CMakeLists.txt  kdtrace_t.cpp
tests/python/: test_python_bindings.py
